# laser_lines

./: .gitignore  CMakeLists.txt  package.xml
include/laser_lines/: line.h  line_extraction.h  line_extraction_ros.h  utilities.h
include/line_finder/: line_extraction.h
launch/: laser_lines.launch.py
msg/: ClosestPointToLineSegment.msg
notes/: note1.md  note2.md  note3.md  note4.md
src/: laser_lines.cpp  line.cpp  line_extraction.cpp  line_extraction_node.cpp  line_extraction_ros.cpp
